deploy: b6319a27a0be77fc40cb10ff20c2b0e2bbe11e56

--- a/resume/index.html
+++ b/resume/index.html
@@ -86,66 +86,48 @@ window.onload = wrap_img;
 
 <p>January 2019 - Present</p>
 <ul>
-  <li>Promoted from Data Scientist to Staff Data Scientist 1/1/2021</li>
-  <li>Brief customers and internal stakeholders on technical progress during program management reviews and technical exchanges</li>
-  <li>Support end to end machine learning pipelines by architecting solutions to customer’s problems, conducting and contributing to applied research, data creation, preparation &amp; validation, training &amp; evaluating models, and analytics development</li>
-  <li>Setup Python data science environments in EC2 instances</li>
+  <li></li>
 </ul>
 
 <p><strong>Geospatial Analyst/Cartographer</strong>, ActioNet, Inc. - Washington, D.C</p>
 
 <p>September 2018 - January 2019</p>
 <ul>
-  <li>Developed and disseminated geospatial and infographic products in support of U.S. foreign policy and national security</li>
-  <li>Wrote Python scripts to process satellite imagery</li>
-  <li>Disseminated satellite imagery through web services such as GeoNode</li>
-  <li>Met with key policy and intelligence stakeholders to identify and scope product requirements</li>
+  <li></li>
 </ul>
 
 <p><strong>Geospatial Data Scientist</strong>, Maxar Technologies - Washington, D.C. / Reston, VA</p>
 
 <p>June 2016 - September 2018</p>
 <ul>
-  <li>Blended all-source intelligence analysis with data science and Python programming to identify and track indicators and warnings, irregular activity, and patterns over areas of interest</li>
-  <li>Wrote or contributed to new functionality for Python scripts to identify locations of significant activity in big spatial datasets; includes geolocated social media, SIGINT exhaust, COMEXT, ELINT, etc.</li>
-  <li>Wrote Python scripts to identify signals of interest and patterns in COMEXT data</li>
-  <li>Wrote Python scripts to identify anomalous mobility activity; e.g. impossible journeys</li>
-  <li>Wrote Python scripts to discover persons of interest (POIs) in online social networks; increased POI database 34%</li>
-  <li>Produced or contributed to 50 raw intelligence reports and 5 finished intel products</li>
-  <li>Embedded in another division to adapt and champion our tools for other missions</li>
-  <li>Briefed senior leaders, other offices, agencies, and courses on our tools</li>
-  <li>Developed and/or contributed to briefing materials for training courses</li>
+  <li></li>
 </ul>
 
 <p><strong>Intern</strong>, U.S. Department of State - Washington, D.C</p>
 
 <p>March 2016 - June 2016</p>
 <ul>
-  <li>Developed and disseminated geospatial and infographic products in support of U.S. foreign policy and national security</li>
-  <li>Wrote Python scripts to process satellite imagery</li>
-  <li>Disseminated satellite imagery through web services such as GeoNode</li>
-  <li>Met with key policy and intelligence stakeholders to identify and scope product requirements</li>
+  <li></li>
 </ul>
 
 <p><strong>Geospatial Analyst</strong>, Virginia Tech - Blacksburg, VA</p>
 
 <p>March 2014 - June 2016</p>
 <ul>
-  <li>Geolocated vehicle crashes in the Commonwealth of Virginia</li>
-  <li>Developed geospatial site suitability analytics</li>
+  <li></li>
 </ul>
 
 <hr />
 
 <h2 id="projects">Projects</h2>
-<p>See <a href="https://andrewryanx.github.io/projects">Projects</a></p>
+<p>See <a href="https://andrewryanx.github.io/site/projects/">Projects</a></p>
 
 <hr />
 
 <h2 id="skills">Skills</h2>
 <p><strong>Programming Languages:</strong> Python, SQL</p>
 
-<p><strong>Data Science:</strong> Python, machine learning, exploratory data analysis, descriptive statistics, data cleaning, feature engineering, data visualization, NVIDIA DIGITS, Jupyter Notebooks</p>
+<p><strong>Data Science:</strong> Python, machine learning, deep learning, exploratory data analysis, descriptive statistics, data cleaning, feature engineering, data visualization, NVIDIA DIGITS, Jupyter Notebooks</p>
 
 <p><strong>Domain Expertise:</strong> Geospatial analytics, All-Source intelligence, Pattern of Life analytics, social network analysis</p>
 
