--- a/resources/index.html
+++ b/resources/index.html
@@ -103,6 +103,35 @@ window.onload = wrap_img;
 <hr />
 <h3 id="other-resources">Other Resources</h3>
 
+<p>YouTube Playlists:</p>
+
+<p>Machine Learning - Andrew Ng
+https://www.youtube.com/playlist?list=PLLssT5z_DsK-h9vYZkQkYNWcItqhlRJLN</p>
+
+<p>Stanford CS229: Machine Learning | Autumn 2018
+https://www.youtube.com/playlist?list=PLoROMvodv4rMiGQp3WXShtMGgzqpfVfbU</p>
+
+<p>Neural Networks and Deep Learning (Course 1 of the Deep Learning Specialization) - Andrew Ng
+https://www.youtube.com/playlist?list=PLkDaE6sCZn6Ec-XTbcX1uRg2_u4xOEky0</p>
+
+<p>Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization (Course 2 of the Deep Learning Specialization) - Andrew Ng
+https://www.youtube.com/playlist?list=PLkDaE6sCZn6Hn0vK8co82zjQtt3T2Nkqc</p>
+
+<p>Structuring Machine Learning Projects (Course 3 of the Deep Learning Specialization) - Andrew Ng
+https://www.youtube.com/playlist?list=PLkDaE6sCZn6E7jZ9sN_xHwSHOdjUxUW_b</p>
+
+<p>Convolutional Neural Networks (Course 4 of the Deep Learning Specialization) - Andrew Ng
+https://www.youtube.com/playlist?list=PLkDaE6sCZn6Gl29AoE31iwdVwSG-KnDzF</p>
+
+<p>Stanford CS221: Artificial Intelligence: Principles and Techniques | Autumn 2019
+https://www.youtube.com/playlist?list=PLoROMvodv4rO1NB9TD4iUZ3qghGEGtqNX</p>
+
+<p>MIT 18.650 Statistics for Applications, Fall 2016
+https://www.youtube.com/playlist?list=PLUl4u3cNGP60uVBMaoNERc6knT_MgPKS0</p>
+
+<p>Computer Vision: Amazon Machine Learning University (MLU)
+https://www.youtube.com/playlist?list=PL8P_Z6C4GcuU4knhhCouJujFZ2tTqU-Ta</p>
+
 <hr />
 
   </div>
