--- a/resources/index.html
+++ b/resources/index.html
@@ -105,32 +105,55 @@ window.onload = wrap_img;
 
 <p>YouTube Playlists:</p>
 
-<p>Machine Learning - Andrew Ng
-https://www.youtube.com/playlist?list=PLLssT5z_DsK-h9vYZkQkYNWcItqhlRJLN</p>
+<p>Machine Learning - Andrew Ng</p>
 
-<p>Stanford CS229: Machine Learning | Autumn 2018
-https://www.youtube.com/playlist?list=PLoROMvodv4rMiGQp3WXShtMGgzqpfVfbU</p>
+<p>https://www.youtube.com/playlist?list=PLLssT5z_DsK-h9vYZkQkYNWcItqhlRJLN</p>
 
-<p>Neural Networks and Deep Learning (Course 1 of the Deep Learning Specialization) - Andrew Ng
-https://www.youtube.com/playlist?list=PLkDaE6sCZn6Ec-XTbcX1uRg2_u4xOEky0</p>
+<table>
+  <tbody>
+    <tr>
+      <td>Stanford CS229: Machine Learning</td>
+      <td>Autumn 2018</td>
+    </tr>
+  </tbody>
+</table>
 
-<p>Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization (Course 2 of the Deep Learning Specialization) - Andrew Ng
-https://www.youtube.com/playlist?list=PLkDaE6sCZn6Hn0vK8co82zjQtt3T2Nkqc</p>
+<p>https://www.youtube.com/playlist?list=PLoROMvodv4rMiGQp3WXShtMGgzqpfVfbU</p>
 
-<p>Structuring Machine Learning Projects (Course 3 of the Deep Learning Specialization) - Andrew Ng
-https://www.youtube.com/playlist?list=PLkDaE6sCZn6E7jZ9sN_xHwSHOdjUxUW_b</p>
+<p>Neural Networks and Deep Learning (Course 1 of the Deep Learning Specialization) - Andrew Ng</p>
 
-<p>Convolutional Neural Networks (Course 4 of the Deep Learning Specialization) - Andrew Ng
-https://www.youtube.com/playlist?list=PLkDaE6sCZn6Gl29AoE31iwdVwSG-KnDzF</p>
+<p>https://www.youtube.com/playlist?list=PLkDaE6sCZn6Ec-XTbcX1uRg2_u4xOEky0</p>
 
-<p>Stanford CS221: Artificial Intelligence: Principles and Techniques | Autumn 2019
-https://www.youtube.com/playlist?list=PLoROMvodv4rO1NB9TD4iUZ3qghGEGtqNX</p>
+<p>Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization (Course 2 of the Deep Learning Specialization) - Andrew Ng</p>
 
-<p>MIT 18.650 Statistics for Applications, Fall 2016
-https://www.youtube.com/playlist?list=PLUl4u3cNGP60uVBMaoNERc6knT_MgPKS0</p>
+<p>https://www.youtube.com/playlist?list=PLkDaE6sCZn6Hn0vK8co82zjQtt3T2Nkqc</p>
 
-<p>Computer Vision: Amazon Machine Learning University (MLU)
-https://www.youtube.com/playlist?list=PL8P_Z6C4GcuU4knhhCouJujFZ2tTqU-Ta</p>
+<p>Structuring Machine Learning Projects (Course 3 of the Deep Learning Specialization) - Andrew Ng</p>
+
+<p>https://www.youtube.com/playlist?list=PLkDaE6sCZn6E7jZ9sN_xHwSHOdjUxUW_b</p>
+
+<p>Convolutional Neural Networks (Course 4 of the Deep Learning Specialization) - Andrew Ng</p>
+
+<p>https://www.youtube.com/playlist?list=PLkDaE6sCZn6Gl29AoE31iwdVwSG-KnDzF</p>
+
+<table>
+  <tbody>
+    <tr>
+      <td>Stanford CS221: Artificial Intelligence: Principles and Techniques</td>
+      <td>Autumn 2019</td>
+    </tr>
+  </tbody>
+</table>
+
+<p>https://www.youtube.com/playlist?list=PLoROMvodv4rO1NB9TD4iUZ3qghGEGtqNX</p>
+
+<p>MIT 18.650 Statistics for Applications, Fall 2016</p>
+
+<p>https://www.youtube.com/playlist?list=PLUl4u3cNGP60uVBMaoNERc6knT_MgPKS0</p>
+
+<p>Computer Vision: Amazon Machine Learning University (MLU)</p>
+
+<p>https://www.youtube.com/playlist?list=PL8P_Z6C4GcuU4knhhCouJujFZ2tTqU-Ta</p>
 
 <hr />
 
