deploy: 7c1101fccc88751ad1a60e7aec1518551782a26b

--- a/resources/index.html
+++ b/resources/index.html
@@ -103,18 +103,19 @@ window.onload = wrap_img;
 <hr />
 <h3 id="other-resources">Other Resources</h3>
 
+<p><a href="https://docs.microsoft.com/en-us/learn/roles/data-scientist">Data Scientist Path - Microsoft Learn</a></p>
+
+<p><a href="https://docs.microsoft.com/en-us/learn/paths/foundations-data-science/">Foundations of Data Science - Microsoft Learn</a></p>
+
+<p><a href="https://www.aws.training/Details/eLearning?id=26598">Elements of Data Science - AWS Training</a></p>
+
+<p><a href="https://www.aws.training/Details/eLearning?id=26597">Math for Machine Learning - AWS Training</a></p>
+
 <p>YouTube Playlists:</p>
 
 <p><a href="https://www.youtube.com/playlist?list=PLLssT5z_DsK-h9vYZkQkYNWcItqhlRJLN">Machine Learning - Andrew Ng</a></p>
 
-<table>
-  <tbody>
-    <tr>
-      <td>[Stanford CS229: Machine Learning</td>
-      <td>Autumn 2018](https://www.youtube.com/playlist?list=PLoROMvodv4rMiGQp3WXShtMGgzqpfVfbU)</td>
-    </tr>
-  </tbody>
-</table>
+<p><a href="https://www.youtube.com/playlist?list=PLoROMvodv4rMiGQp3WXShtMGgzqpfVfbU">Stanford CS229: Machine Learning, Autumn 2018 - Andrew Ng</a></p>
 
 <p><a href="https://www.youtube.com/playlist?list=PLkDaE6sCZn6Ec-XTbcX1uRg2_u4xOEky0">Neural Networks and Deep Learning (Course 1 of the Deep Learning Specialization) - Andrew Ng</a></p>
 
@@ -124,14 +125,7 @@ window.onload = wrap_img;
 
 <p><a href="https://www.youtube.com/playlist?list=PLkDaE6sCZn6Gl29AoE31iwdVwSG-KnDzF">Convolutional Neural Networks (Course 4 of the Deep Learning Specialization) - Andrew Ng</a></p>
 
-<table>
-  <tbody>
-    <tr>
-      <td>[Stanford CS221: Artificial Intelligence: Principles and Techniques</td>
-      <td>Autumn 2019](https://www.youtube.com/playlist?list=PLoROMvodv4rO1NB9TD4iUZ3qghGEGtqNX)</td>
-    </tr>
-  </tbody>
-</table>
+<p><a href="https://www.youtube.com/playlist?list=PLoROMvodv4rO1NB9TD4iUZ3qghGEGtqNX">Stanford CS221: Artificial Intelligence: Principles and Techniques, Autumn 2019</a></p>
 
 <p><a href="https://www.youtube.com/playlist?list=PLUl4u3cNGP60uVBMaoNERc6knT_MgPKS0">MIT 18.650 Statistics for Applications, Fall 2016</a></p>
 
