--- a/web_maps/twitter_mbtiles/index.html
+++ b/web_maps/twitter_mbtiles/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>10 Million Tweets Visualized using Vector Tiles, MapBox, & Leaflet</title>
+  <title>10M Tweets Visualized using Vector Tiles, MapBox, & Leaflet</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.Default.css'><link rel="stylesheet" href="./style.css">
