deploy: 748e50e32bb915a7bc7d53030a754238042fb2ed

--- a/projects/index.html
+++ b/projects/index.html
@@ -87,7 +87,7 @@ window.onload = wrap_img;
 <hr />
 <h3 id="web-maps">Web Maps</h3>
 
-<p><a href="https://andrewryanx.github.io/site/web_maps/twitter_mbtiles/index.html">Custom Tweet Map Using MBTiles</a></p>
+<p><a href="https://andrewryanx.github.io/site/web_maps/twitter_mbtiles/index.html">10M Tweets Visualized using Vector Tiles, MapBox Styles, &amp; Leaflet</a></p>
 
 <p><a href="https://andrewryanx.github.io/site/web_maps/twitter_mining/index.html">Tweet Map</a></p>
 
