deploy: 22617f1fd26ff7691234fc734349b8837fc62699

--- a/projects/index.html
+++ b/projects/index.html
@@ -89,9 +89,7 @@ window.onload = wrap_img;
 
 <p><a href="https://andrewryanx.github.io/site/web_maps/twitter_mbtiles/index.html">10M Tweets Visualized using Vector Tiles, MapBox Styles, &amp; Leaflet</a></p>
 
-<p><a href="https://andrewryanx.github.io/site/web_maps/twitter_mining/index.html">Tweet Map</a></p>
-
-<p><a href="https://andrewryanx.github.io/site/web_maps/dc_potholes/index.html">DC Potholes</a></p>
+<p><a href="https://andrewryanx.github.io/site/web_maps/dc_potholes/index.html">DC Pothole Monitor</a></p>
 
 <hr />
 
